--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,44 @@
 ---
+import { Image } from 'astro:assets';
+import { getCollection } from 'astro:content';
 
+const posts = (await getCollection('posts')).sort(
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+);
 ---
 
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+  <head>
+		<style>
+			main {
+			  width: 960px;
+			  max-width: calc(100% - 2em);
+			  margin: 0 auto;
+			}
+
+		</style>
 	</head>
+  
 	<body>
-		<h1>Astro</h1>
+		<main>
+			<section>
+				<ul>
+					{
+						posts.map((post) => (
+							<li>
+								<a href={`/${post.id}`}>
+									{post.data.heroImage && (
+										<Image width={720} height={360} src={post.data.heroImage} alt="" />
+									)}
+									<h4 class="title">{post.data.title}</h4>
+								</a>
+                              <p>{post.data.description}</p>
+							</li>
+						))
+					}
+				</ul>
+			</section>
+		</main>
 	</body>
 </html>
