--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,14 @@
 ---
 import { Image } from 'astro:assets';
 import { getCollection } from 'astro:content';
+import Layout from '../layouts/Layout.astro'; 
 
 const posts = (await getCollection('posts')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-		<style>
-			main {
-			  width: 960px;
-			  max-width: calc(100% - 2em);
-			  margin: 0 auto;
-			}
-
-		</style>
-	</head>
-  
-	<body>
+<Layout>
 		<main>
 			<section>
 				<ul>
@@ -31,7 +19,7 @@ const posts = (await getCollection('posts')).sort(
 									{post.data.heroImage && (
 										<Image width={720} height={360} src={post.data.heroImage} alt="" />
 									)}
-									<h4 class="title">{post.data.title}</h4>
+									<h4>{post.data.title}</h4>
 								</a>
                               <p>{post.data.description}</p>
 							</li>
@@ -40,5 +28,4 @@ const posts = (await getCollection('posts')).sort(
 				</ul>
 			</section>
 		</main>
-	</body>
-</html>
+</Layout>
