--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,31 +1,36 @@
 ---
-import { Image } from 'astro:assets';
-import { getCollection } from 'astro:content';
-import Layout from '../layouts/Layout.astro'; 
+import { Image } from "astro:assets";
+import { getCollection } from "astro:content";
+import Layout from "../layouts/Layout.astro";
 
-const posts = (await getCollection('posts')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+const posts = (await getCollection("posts")).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
 ---
 
 <Layout>
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/${post.id}`}>
-									{post.data.heroImage && (
-										<Image width={720} height={360} src={post.data.heroImage} alt="" />
-									)}
-									<h4>{post.data.title}</h4>
-								</a>
-                              <p>{post.data.description}</p>
-							</li>
-						))
-					}
-				</ul>
-			</section>
-		</main>
+  <main>
+    <section>
+      <ul>
+        {
+          posts.map((post) => (
+            <li>
+              <a href={`/${post.id}`}>
+                {post.data.heroImage && (
+                  <Image
+                    width={720}
+                    height={360}
+                    src={post.data.heroImage}
+                    alt=""
+                  />
+                )}
+                <h4>{post.data.title}</h4>
+              </a>
+              <p>{post.data.description}</p>
+            </li>
+          ))
+        }
+      </ul>
+    </section>
+  </main>
 </Layout>
