Add recipe support

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const posts = (await getCollection("posts")).sort(
         {
           posts.map((post) => (
             <li>
-              <a href={`/${post.id}`}>
+              <a href={`/posts/${post.id}`}>
                 {post.data.heroImage && (
                   <Image
                     width={720}
