--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -22,7 +22,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         <div class="prose">
           <div>
             <h1>{title}</h1>
-            <hr />
+            <hr class="my-4" />
           </div>
           <slot />
         </div>
