--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,9 @@
 ---
 import "../styles/global.css";
+import "@fontsource/sixtyfour-convergence";
+import "@fontsource/workbench";
+import "@fontsource/inter";
+import "@fontsource/neuton";
 ---
 
 <!doctype html>
