--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,9 @@ import "@fontsource/neuton";
 
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+  </head>
   <body>
     <slot />
   </body>
