--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,12 +4,14 @@ import "@fontsource/sixtyfour-convergence";
 import "@fontsource/workbench";
 import "@fontsource/inter";
 import "@fontsource/neuton";
+
+import BaseHead from "../components/BaseHead.astro";
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <BaseHead />
   </head>
   <body>
     <slot />
