--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const wooo = `
 ---
 
 <Layout>
-  <main class="pt-32">
+  <main class="laptop:pt-32 tablet:pt-6 pt-4">
     <section class="flex items-center gap-4">
       <h1 class="mb-4">proteus softworks</h1>
       <pre
