--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,7 +10,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 <Layout>
   <body>
-    <main>
+    <main class="laptop:pt-32 tablet:pt-6 pt-4">
       <article>
         <div class="hero-image">
           {
