Even more styles!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,10 +17,10 @@ const wooo = `
 
 <Layout>
   <main class="laptop:pt-32 tablet:pt-6 pt-4">
-    <section class="flex items-center gap-4">
-      <h1 class="mb-4">proteus softworks</h1>
+    <section class="flex items-end gap-4">
+      <h1 class="tablet:mb-4 mb-2 whitespace-nowrap">proteus softworks</h1>
       <pre
-        class="font-console text-xs font-black">
+        class="font-console tablet:text-xs text-[0.5rem] font-black">
  ╱|、
 (˚ˎ 。7  
  |、˜〵          
