--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,8 @@ import "@fontsource/sixtyfour-convergence";
 import "@fontsource/workbench";
 import "@fontsource/inter";
 import "@fontsource/neuton";
+import "@fontsource/ibm-plex-mono";
+import "@fontsource/m-plus-1-code";
 
 import BaseHead from "../components/BaseHead.astro";
 ---
