--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,10 +21,13 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
           }
         </div>
 
-        <div>
-          <h1>{title}</h1>
-          <hr class="my-4" />
-        </div>
+        <section>
+          <h1 class="mb-2">{title}</h1>
+          <p class="text-base-dim-content font-mono text-sm">> {description}</p>
+        </section>
+
+        <hr class="my-4" />
+
         <Prose>
           <slot />
         </Prose>
