--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,7 +11,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 <Layout>
   <body>
-    <main class="laptop:pt-32 tablet:pt-6 pt-4">
+    <main class="laptop:pt-16 tablet:pt-6 pt-4">
       <article>
         <div class="hero-image">
           {
@@ -22,8 +22,10 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         </div>
 
         <section>
-          <h1 class="mb-2">{title}</h1>
-          <p class="text-base-dim-content font-mono text-sm">> {description}</p>
+          <h1 class="mb-2 text-shadow-(--white-glow)">{title}</h1>
+          <p class="text-base-dim-content font-mono text-sm">
+            {"> "}{description}
+          </p>
         </section>
 
         <hr class="my-4" />
