--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,9 +37,13 @@
   --color-error: oklch(58% 0.253 17.585);
   --color-error-content: oklch(96% 0.015 12.422);
 
-  --color-background:var(--color-base-300);
+  /* --color-background:var(--color-base-300); */
+  --color-background: black;
 
-  --comfortable-width: 720px; 
+  --comfortable-width: 720px;
+
+  --white-glow: 0 0 4px white;
+  --white-glow-lg: 0 0 8px white;
 
   --radius-selector: 0.25rem;
   --radius-field: 0.25rem;
@@ -65,8 +69,9 @@
 }
 
 body {
-  @apply text-base tablet:text-lg;
-  color: var(--color-base-content);
+    @apply text-base tablet:text-lg;
+    color: #f9f9fb;
+  /* color: var(--color-base-content); */
   background-color: var(--color-background);
   font-family: var(--font-serif);
   font-size-adjust: 0.6;
@@ -140,7 +145,7 @@ hr {
 }
 
 .ascii-cat {
-  @apply font-console text-xs font-black;
+  @apply font-console font-black;
 }
 
 .my-prose {
@@ -153,4 +158,14 @@ hr {
    prose-a:underline
    /* prose-p:text-justify */
    prose-img:rounded-xl;
+}
+
+.blink {
+  animation: blinker 3s linear infinite;
+}
+
+@keyframes blinker {
+  0% { opacity: 1; } /* Element is fully visible */
+  50% { opacity: 0; } /* Element is fully invisible */
+  100% { opacity: 1; } /* Element is fully visible again */
 }
