--- a/src/components/SiteLogo.astro
+++ b/src/components/SiteLogo.astro
@@ -4,7 +4,7 @@
 
 <p
   id="site-logo"
-  class="font-console text-2xl whitespace-nowrap opacity-[0.6] text-shadow-(--white-glow)"
+  class="font-console text-base-dim-content text-2xl whitespace-nowrap text-shadow-(--white-glow)"
 >
   proteus softworks
 </p>
