--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,7 @@ const funFacts: FunFact[] = [
   ["Currently playing", "Hollow Knight: Silksong"],
   ["Favorite veggie burger", "Garten — Severna Park"],
   ["Residing in", "Washington, DC"],
+  ["SSB64 main", "Yoshi"],
 ];
 const funFact = ArrayService.randomElement(funFacts);
 ---
