--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const funFact = ArrayService.randomElement(funFacts);
 ---
 
 <Layout header={false}>
-  <main class="laptop:pt-16 tablet:pt-6 pt-4">
+  <main class="pt-16">
     <section class="mb-8">
       <div class="flex items-end gap-4">
         <h1 class="whitespace-nowrap text-shadow-(--white-glow)">
