--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,7 +11,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 <Layout>
   <body>
-    <main class="laptop:pt-16 tablet:pt-6 pt-4">
+    <main class="pt-16">
       <article>
         <div class="hero-image">
           {
