--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,17 +1,17 @@
 ---
-import { type CollectionEntry, getCollection, render } from "astro:content";
+import { getEntry, render } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
 
-export async function getStaticPaths() {
-  const posts = await getCollection("posts");
-  return posts.map((post) => ({
-    params: { slug: post.id },
-    props: post,
-  }));
-}
-type Props = CollectionEntry<"posts">;
+export const prerender = false;
 
-const post = Astro.props;
+const { slug } = Astro.params;
+
+const post = await getEntry("posts", slug!);
+
+if (!post) {
+  return Astro.redirect("/404");
+}
+
 const { Content } = await render(post);
 ---
 
