--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,17 +1,17 @@
 ---
-import { getEntry, render } from "astro:content";
+import { type CollectionEntry, getCollection, render } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
 
-export const prerender = false;
-
-const { slug } = Astro.params;
-
-const post = await getEntry("posts", slug!);
-
-if (!post) {
-  return Astro.redirect("/404");
+export async function getStaticPaths() {
+  const posts = await getCollection("posts");
+  return posts.map((post) => ({
+    params: { slug: post.id },
+    props: post,
+  }));
 }
+type Props = CollectionEntry<"posts">;
 
+const post = Astro.props;
 const { Content } = await render(post);
 ---
 
