--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -22,7 +22,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         </div>
 
         <section>
-          <h1 class="mb-2 text-shadow-(--white-glow)">{title}</h1>
+          <h1 class="mb-2">{title}</h1>
           <p class="text-base-dim-content font-mono text-sm">
             {"> "}{description}
           </p>
