--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const funFact = ArrayService.randomElement(funFacts);
   <main class="pt-16">
     <section class="mb-8">
       <div class="flex items-end gap-4">
-        <h1 class="whitespace-nowrap text-shadow-(--white-glow)">
+        <h1 class="whitespace-nowrap">
           proteus softworks
         </h1>
         <pre
