--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const funFact = ArrayService.randomElement(funFacts);
         <div>
           <h1 class="whitespace-nowrap">proteus softworks</h1>
           <div class="flex items-center gap-2">
-            <p class="font-console">a.k.a. brandon wetzel</p>
+            <p class="font-console whitespace-nowrap">a.k.a. brandon wetzel</p>
             <p class="font-console">|</p>
 
             <a
