--- a/src/pages/drafts.astro
+++ b/src/pages/drafts.astro
@@ -13,7 +13,7 @@ const posts = [...regularPosts, ...obsidianPosts]
   .sort((a, b) => b.data.draftDate!.valueOf() - a.data.draftDate!.valueOf());
 ---
 
-<Layout header={false}>
+<Layout>
   <main class="pt-16">
     <section>
       <h3 class="underline">Draft Posts</h3>
